--- a/Grace/packages.config
+++ b/Grace/packages.config
@@ -18,7 +18,7 @@
   <package id="Microsoft.VisualStudio.Shell.Interop.15.6.DesignTime" version="15.6.27413" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Shell.Interop.8.0" version="8.0.50728" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Shell.Interop.9.0" version="9.0.30730" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.Text.Data" version="15.6.27740" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Text.Data" version="15.8.525" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.TextManager.Interop" version="7.10.6071" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.TextManager.Interop.8.0" version="8.0.50728" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Threading" version="15.8.168" targetFramework="net461" />
@@ -26,7 +26,13 @@
   <package id="Microsoft.VisualStudio.Utilities" version="15.8.28010" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Validation" version="15.3.58" targetFramework="net461" />
   <package id="Microsoft.VSSDK.BuildTools" version="15.8.3253" targetFramework="net461" developmentDependency="true" />
-  <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net461" />
-  <package id="StreamJsonRpc" version="1.3.23" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="StreamJsonRpc" version="1.4.128" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
