--- a/Grace/packages.config
+++ b/Grace/packages.config
@@ -25,6 +25,7 @@
   <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.8.168" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Utilities" version="15.8.28010" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Validation" version="15.3.58" targetFramework="net461" />
+  <package id="Microsoft.VSSDK.BuildTools" version="15.8.3252" targetFramework="net461" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="StreamJsonRpc" version="1.4.128" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
